--- a/hu_windows_2019.adoc
+++ b/hu_windows_2019.adoc
@@ -24,7 +24,7 @@ include::_include/windows/reuse_windows_san_boot.adoc[]
 
 
 == Installing Windows hotfixes
-We suggest the use of latest cumulative update to be installed on the server. Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2019[Microsoft Update Catalog 2019^] website to obtain and install the required Windows hotfixes for your version of Windows.
+We suggest the use of latest *cumulative update to be installed on the server. Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2019[Microsoft Update Catalog 2019^] website to obtain and install the required Windows hotfixes for your version of Windows.
 
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
 
