--- a/_include/windows/reuse_windows_hotfix_install.adoc
+++ b/_include/windows/reuse_windows_hotfix_install.adoc
@@ -1,11 +1,10 @@
 
-. Determine which hotfixes are required for your version of Windows Server.
 . Download hotfixes from the Microsoft support site.
 
-NOTE: There are some cases where you might be required to request a given hotfix from Microsoft support personnel as some hotfixes are not available for direct download.
+NOTE: Some hotfixes are not available for direct download. In these cases, you will need to request a given hotfix from Microsoft support personnel.
 
 
-[start=3]
+[start=2]
 . Follow the instructions provided by Microsoft to install the hotfixes.
 
 
