Added notes to OL 8.2 and RHEL 8.3.

--- a/hu_ol_82.adoc
+++ b/hu_ol_82.adoc
@@ -102,6 +102,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 8.2 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_82.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.2.
+
 == Known Problems and Limitations
 
 There are no known issues for Oracle Linux 8.2.
