--- a/hu_rhel_83.adoc
+++ b/hu_rhel_83.adoc
@@ -116,7 +116,7 @@ devices {
 }
 ----
 
-NOTE: You can use the recommended settings to configure Kernel-based Virtual Machine (KVM) as well. There are no changes required to configure KVM as the LUN is mapped to the Hypervisor.
+include::_include/hu/reuse_hu_kvm_configuration_note.adoc[]
 
 == Known Problems and Limitations
 
