Final updates from review cycle. Ready to post.

--- a/_include/windows/reuse_windows_non_asa_configuration.adoc
+++ b/_include/windows/reuse_windows_non_asa_configuration.adoc
@@ -10,4 +10,4 @@ NOTE: The non-optimized paths are only used when no optimized paths are availabl
 
 The following example displays the correct output for an ONTAP LUN with two active/optimized paths and two active/non-optimized paths.
 
-image::roundrobinSUBSET.png[]
+image::nonasa.png[]
