--- a/hu_windows_2016.adoc
+++ b/hu_windows_2016.adoc
@@ -24,7 +24,7 @@ include::_include/windows/reuse_windows_san_booting.adoc[]
 
 
 == Installing Windows hotfixes
-We suggest the use of latest *cumulative* update to be installed on the server.
+We suggest the use of *latest cumulative update* to be installed on the server.
 
 NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2016[Microsoft Update Catalog 2016^] website to obtain and install the required Windows hotfixes for your version of Windows.
 
