Updated all OL and RHEL topics and created topics for CentOS.

--- a/hu_centos_78.adoc
+++ b/hu_centos_78.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration_note.adoc[]
 
 == Known Problems and Limitations
 
-There are no known issues for CentOS 7.8.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_78#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.8.
 
 == Release Notes
 
