--- a/hu_ol_65.adoc
+++ b/hu_ol_65.adoc
@@ -102,6 +102,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 6.5 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_65.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.5.
+
 == Known Problems and Limitations
 
 There are no known issues for Oracle 6.5.
