--- a/hu_ol_69.adoc
+++ b/hu_ol_69.adoc
@@ -102,6 +102,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 6.9 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_69.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.9.
+
 == Known Problems and Limitations
 
 [cols=4*,options="header"]
