--- a/hu_ol_73.adoc
+++ b/hu_ol_73.adoc
@@ -99,6 +99,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 7.3 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_73.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.3.
+
 == Known Problems and Limitations
 
 There are no known issues for Oracle Linux 7.3.
