--- a/hu_ol_77.adoc
+++ b/hu_ol_77.adoc
@@ -98,6 +98,7 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 7.7 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_77.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.7.
 == Known Problems and Limitations
 
 [cols=4*,options="header"]
