--- a/hu_ol_78.adoc
+++ b/hu_ol_78.adoc
@@ -101,6 +101,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 7.8 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_78.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.8.
+
 == Known Problems and Limitations
 
 
