--- a/hu_centos_80.adoc
+++ b/hu_centos_80.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
-permalink: hu_centos_79.html
-keywords: host utilities, centos, linux, 7.9, netapp, ontap
-summary: Describes how to use CentOS 7.9 with ONTAP
+permalink: hu_centos_80.html
+keywords: host utilities, centos, linux, 8.0, netapp, ontap
+summary: Describes how to use CentOS 8.0 with ONTAP
 ---
 
-= Using CentOS 7.9 with NetApp ONTAP
+= Using CentOS 8.0 with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -16,7 +16,7 @@ summary: Describes how to use CentOS 7.9 with ONTAP
 
 == Installing the Linux Unified Host Utilities
 
-include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
+include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
 == SAN Toolkit
 
@@ -25,13 +25,13 @@ include::_include/hu/reuse_hu_san_toolkit.adoc[]
 == SAN Booting
 
 .Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=95803;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=91241;&solution=236&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 == Multipathing
 
-For CentOS 7.9 the /etc/multipath.conf file must exist, but you do not need to make specific changes to the file. CentOS 7.9 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
+For CentOS 8.0 the /etc/multipath.conf file must exist, but you do not need to make specific changes to the file. CentOS 8.0 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
 
 include::_include/hu/reuse_hu_multipathing.adoc[]
 
@@ -39,8 +39,8 @@ include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
 ----
 # multipath -ll
-3600a09803831347657244e527766394e dm-5 NETAPP,LUN C-Mode
-size=80G  features='4 queue_if_no_path pg_init_retries 50 retain_attached_hw_handle' hwhandler='1 alua' wp=rw
+3600a098038303634722b4d59646c4436 dm-28 NETAPP,LUN C-Mode
+size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
 `-+- policy='service-time 0' prio=50 status=active
   |- 11:0:7:1    sdfi   130:64   active ready running
   |- 11:0:9:1    sdiy  8:288     active ready running
@@ -54,21 +54,20 @@ include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
 ----
 # multipath -ll
-3600a09803831347657244e527766394e dm-5 NETAPP,LUN C-Mode
-size=80G features='4 queue_if_no_path pg_init_retries 50 retain_attached_hw_handle' hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=active
-| |- 11:0:1:0 sdj 8:144 active ready running
-| |- 11:0:2:0 sdr 65:16 active ready running
-`-+- policy='service-time 0' prio=10 status=enabled
-|- 11:0:0:0 sdb 8:i6 active ready running
-|- 12:0:0:0 sdz 65:144 active ready running
+3600a098038303634722b4d59646c4436 dm-28 NETAPP,LUN C-Mode
+size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
+`-+- policy='service-time 0' prio=50 status=active
+  |- 11:0:7:1    sdfi   130:64   active ready running
+  |- 11:0:9:1    sdiy  8:288     active ready running
+  |- 11:0:10:1  sdml 69:464   active ready running
+  |- 11:0:11:1  sdpt  131:304  active ready running
 ----
 
 include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 == Recommended Settings
 
-The CentOS 7.9 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
+The CentOS 8.0 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
 include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
 
@@ -80,7 +79,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 | dev_loss_tmo | "infinity"
 | failback | immediate
 | fast_io_fail_tmo | 5
-| features | "3 queue_if_no_path pg_init_retries 50"
+| features | "2 pg_init_retries 50"
 | flush_on_last_del | "yes"
 | hardware_handler | "0"
 | no_path_retry | queue
@@ -120,7 +119,7 @@ include::_include/hu/reuse_hu_kvm_configuration_note.adoc[]
 
 == Known Problems and Limitations
 
-For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_79#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.9.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_80#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.0.
 
 == Release Notes
 
