--- a/hu_centos_82.adoc
+++ b/hu_centos_82.adoc
@@ -104,7 +104,7 @@ include::_include/hu/reuse_hu_kvm_configuration_note.adoc[]
 
 == Known Problems and Limitations
 
-There are no known issues for CentOS 8.2.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_82#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.2.
 
 == Release Notes
 
