--- a/hu_centos_83.adoc
+++ b/hu_centos_83.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration_note.adoc[]
 
 == Known Problems and Limitations
 
-There are no know issues for CentOS 8.3.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_83#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.3.
 
 == Release Notes
 
