--- a/hu_ol_70.adoc
+++ b/hu_ol_70.adoc
@@ -112,8 +112,9 @@ devices {
 }
 ----
 
-== Known Problems and Limitations
+NOTE: To configure Oracle Linux 7.0 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_70.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.0.
 
+== Known Problems and Limitations
 
 [cols=4*,options="header"]
 |===
