--- a/hu_ol_72.adoc
+++ b/hu_ol_72.adoc
@@ -121,6 +121,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 7.2 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_72.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.2.
+
 == Known Problems and Limitations
 
 There are no known issues for Oracle Linux 7.2.
