--- a/hu_ol_74.adoc
+++ b/hu_ol_74.adoc
@@ -98,6 +98,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 7.4 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_74.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.4.
+
 == Known Problems and Limitations
 
 [cols=4*,options="header"]
