--- a/hu_ol_75.adoc
+++ b/hu_ol_75.adoc
@@ -99,6 +99,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 7.5 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_75.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.5.
+
 == Known Problems and Limitations
 
 [cols=4*,options="header"]
