--- a/hu_ol_76.adoc
+++ b/hu_ol_76.adoc
@@ -98,6 +98,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 7.6 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_76.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.6.
+
 == Known Problems and Limitations
 
 [cols=4*,options="header"]
