--- a/hu_ol_80.adoc
+++ b/hu_ol_80.adoc
@@ -99,6 +99,8 @@ devices {
 }
 ----
 
+NOTE: To configure Oracle Linux 8.0 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_80.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.0.
+
 == Known Problems and Limitations
 
 There are no known issues for Oracle Linux 8.0.
