I'm debugging, or maybe just bugging....

--- a/nvme/reuse_nvme_verbose_logging.adoc
+++ b/nvme/reuse_nvme_verbose_logging.adoc
@@ -1,9 +1,1 @@
-.	You can set the lpfc_log_verbose driver setting to any of the following values to log NVMe/FC events.
-+
-IMPORTANT: Ccode snippet 1 goes here.
-
-.	After setting any of these values, run `dracut-f` and reboot host.
-
-.	After rebooting, verify the settings.
-+
-IMPORTANT: Ccode snippet 2 goes here.
+This is a test
