Incorporated feedback from Gokul and Arun.

--- a/hu_ol_64.adoc
+++ b/hu_ol_64.adoc
@@ -175,7 +175,7 @@ This issue is seen with following version:
 | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=14082[14082^]
 |===
 
-include::_include/hu/reuse_hu_ol_issues_note.adoc[]
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_64#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.4.
 
 == Release Notes
 
