--- a/hu_ol_82.adoc
+++ b/hu_ol_82.adoc
@@ -107,3 +107,5 @@ NOTE: To configure Oracle Linux 8.2 RedHat Enterprise Kernel (RHCK), use the lin
 == Known Problems and Limitations
 
 There are no known issues for Oracle Linux 8.2.
+
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_82#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.2.
