--- a/hu_ol_610.adoc
+++ b/hu_ol_610.adoc
@@ -107,7 +107,7 @@ NOTE: To configure Oracle Linux 6.10 RedHat Enterprise Kernel (RHCK), use the li
 
 There are no known issues for Oracle 6.10.
 
-include::_include/hu/reuse_hu_ol_issues_note.adoc[]
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_610#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.10.
 
 == Release Notes
 
