--- a/hu_ol_65.adoc
+++ b/hu_ol_65.adoc
@@ -108,7 +108,7 @@ NOTE: To configure Oracle Linux 6.5 RedHat Enterprise Kernel (RHCK), use the lin
 
 There are no known issues for Oracle 6.5.
 
-include::_include/hu/reuse_hu_ol_issues_note.adoc[]
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_65#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.5.
 
 == Release Notes
 
