--- a/hu_ol_69.adoc
+++ b/hu_ol_69.adoc
@@ -117,7 +117,7 @@ NOTE: To configure Oracle Linux 6.9 RedHat Enterprise Kernel (RHCK), use the lin
 | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=16039[16039^]
 |===
 
-include::_include/hu/reuse_hu_ol_issues_note.adoc[]
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_69#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.9.
 
 == Release Notes
 
