--- a/hu_ol_73.adoc
+++ b/hu_ol_73.adoc
@@ -105,7 +105,7 @@ NOTE: To configure Oracle Linux 7.3 RedHat Enterprise Kernel (RHCK), use the lin
 
 There are no known issues for Oracle Linux 7.3.
 
-include::_include/hu/reuse_hu_ol_issues_note.adoc[]
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_73#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.3.
 
 == Release Notes
 
