--- a/hu_ol_78.adoc
+++ b/hu_ol_78.adoc
@@ -127,5 +127,4 @@ Online
 Online | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=16853[16853^]
 |===
 
-.Note
-For Oracle Linux (Red Hat compatible kernel) known issues, see the Known Issues section in the corresponding https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=63146[Red Hat Enterprise Linux release^] documentation.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_78#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.8.
