--- a/hu_ol_68.adoc
+++ b/hu_ol_68.adoc
@@ -108,7 +108,7 @@ NOTE: To configure Oracle Linux 6.8 RedHat Enterprise Kernel (RHCK), use the lin
 
 There are no known issues for Oracle 6.8.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_68#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.8.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_68.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.8.
 
 == Release Notes
 
