--- a/hu_ol_70.adoc
+++ b/hu_ol_70.adoc
@@ -133,7 +133,7 @@ NOTE: To configure Oracle Linux 7.0 RedHat Enterprise Kernel (RHCK), use the lin
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=916501[916501^] |	Qlogic 10G FCoE (QLE8152) host kernel crash observed during storage failover operations with IO | You may observe a kernel crash in Qlogic driver module on 10G FCoE Qlogic (QLE8152) host. The crash occurs during storage failover operations with IO. Probability of hitting this crash is high which leads to longer IO outage on the host. | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=15019[15019^]
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_70#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.0.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_70.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.0.
 
 == Release Notes
 
