--- a/hu_ol_72.adoc
+++ b/hu_ol_72.adoc
@@ -127,7 +127,7 @@ NOTE: To configure Oracle Linux 7.2 RedHat Enterprise Kernel (RHCK), use the lin
 
 There are no known issues for Oracle Linux 7.2.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_72#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.2.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_72.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.2.
 
 == Release Notes
 
