--- a/hu_ol_74.adoc
+++ b/hu_ol_74.adoc
@@ -113,7 +113,7 @@ NOTE: To configure Oracle Linux 7.4 RedHat Enterprise Kernel (RHCK), use the lin
 | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=16039[16039^]
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_74#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.4.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_74.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.4.
 
 == Release Notes
 
