--- a/hu_ol_75.adoc
+++ b/hu_ol_75.adoc
@@ -114,7 +114,7 @@ If kdump is configured, the kernel disruption creates a vmcore file in the  /var
 After a kernel disruption, you can recover by rebooting the host operating system and restarting the application. |
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_75#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.5.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_75.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.5.
 
 == Release Notes
 
