--- a/hu_ol_76.adoc
+++ b/hu_ol_76.adoc
@@ -136,7 +136,7 @@ When the storage node returns to its optimal state, the logical interfaces also 
  Online | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=16853[16853^]
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_76#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.6.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_76.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.6.
 
 == Release Notes
 
