--- a/hu_ol_77.adoc
+++ b/hu_ol_77.adoc
@@ -123,4 +123,4 @@ Online
 Online | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=16853[16853^]
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_77#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.7.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_77.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.7.
