--- a/hu_ol_78.adoc
+++ b/hu_ol_78.adoc
@@ -127,4 +127,4 @@ Online
 Online | link:https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=16853[16853^]
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_78#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.8.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_78.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.8.
