--- a/hu_ol_80.adoc
+++ b/hu_ol_80.adoc
@@ -105,7 +105,7 @@ NOTE: To configure Oracle Linux 8.0 RedHat Enterprise Kernel (RHCK), use the lin
 
 There are no known issues for Oracle Linux 8.0.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_80#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.0.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_80.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.0.
 
 == Release Notes
 
