--- a/hu_ol_82.adoc
+++ b/hu_ol_82.adoc
@@ -108,4 +108,4 @@ NOTE: To configure Oracle Linux 8.2 RedHat Enterprise Kernel (RHCK), use the lin
 
 There are no known issues for Oracle Linux 8.2.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_82#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.2.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_82.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.2.
