--- a/nvme_rhel_83.adoc
+++ b/nvme_rhel_83.adoc
@@ -26,9 +26,9 @@ For RHEL 8.3, in-kernel NVMe multipath remains disabled by default. Therefore, y
 
 . Install Red Hat Enterprise Linux 8.3 GA on the server.
 +
-If you are upgrading from RHEL 8.2 to RHEL 8.3 using yum update/upgrade, your /etc/nvme/host* files might be lost. To avoid file loss, do the following:
+If you are upgrading from RHEL 8.2 to RHEL 8.3 using `yum update/upgrade`, your `/etc/nvme/host*` files might be lost. To avoid file loss, do the following:
 
-include::_include/nvme/reuse_nvme_RH_upgrade_instructions.adoc[]
+include::_include/nvme/reuse_nvme_enabling_step1_substeps.adoc[]
 
 . After the installation is complete, verify that you're running the specified Red Hat Enterprise Linux kernel.
 +
