--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -30,7 +30,7 @@ If you are upgrading from RHEL 8.1 to RHEL 8.2 using `yum update/upgrade`, your 
 
 include::_include/nvme/reuse_nvme_enabling_step1_substeps.adoc[]
 
-. Verify that you are running the specified Red Hat Enterprise Linux kernel.
+. After the installation is complete, verify that you are running the specified Red Hat Enterprise Linux kernel.
 +
 ----
 # uname -r
