--- a/hu_centos_79.adoc
+++ b/hu_centos_79.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_79#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.9.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_79.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.9.
 
 == Release Notes
 
