--- a/hu_centos_80.adoc
+++ b/hu_centos_80.adoc
@@ -119,7 +119,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_80#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.0.
+For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_80.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.0.
 
 == Release Notes
 
