--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, aix, powervm, vios, 3.1, 7.2 netapp, ontap
 summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTAP
 ---
 
-= Using IBM AIX 7.2 and/or PowerVM VIOS 3.1 with NetApp ONTAP
+= Using IBM AIX 7.2 and/or PowerVM (VIOS 3.1) with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -49,7 +49,6 @@ The following directory is created when you uncompress the file: ntap_aix_host_u
 
 . Reboot the host.
 
-
 == SAN Toolkit
 
 include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
@@ -78,12 +77,10 @@ If you decide to use SAN booting, it must be supported by your configuration. Yo
 
 SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot device for an AIX/PowerVM host.  You can set up a SAN boot LUN to work in an AIX MPIO environment that is running the AIX Host Utilities with either the FC or FCoE protocol. The method you use for creating a SAN boot LUN and installing a new OS image on it in an AIX MPIO environment can vary, depending on which protocol you are using.
 
-* link:hu_aix_72_sanbooting_aix.html[AIX MPIO without Power VM]
-* link:hu_aix_72_sanbooting_powervm_vscsi.html[PowerVM vSCSI]
-
 == Multipathing
 
 Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. The AIX and PowerVM environments of the Host Utilities use AIX’s native multipathing solution (MPIO).
+
 For AIX, Path Control Module (PCM) is responsible for controlling multiple paths. PCM is a storage vendor supplied code that handles path management. This gets installed and enabled as part of the Host Utilities installation.
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
@@ -163,4 +160,4 @@ Following are some recommended parameter settings for NetApp ONTAP LUN’s.  The
 
 == Recommended Settings for MetroCluster
 
-By default, the AIX operating system enforces a shorter I/O timeout if when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For addition information and recommended changes to default settings, please refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318]
+By default, the AIX operating system enforces a shorter I/O timeout if when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, please refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318]
