--- a/hu_veritas_7x.adoc
+++ b/hu_veritas_7x.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_veritas_7x.html
-keywords: host utilities, veritas, infoscale, 7.4.a, 7.4.2, 7.4.3, netapp, ontap
+keywords: host utilities, veritas, infoscale, 7.4.1, netapp, ontap
 summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
 
