Adding Veritas Infoscale 7.4.1

--- a/hu_veritas_7x.adoc
+++ b/hu_veritas_7x.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, veritas, infoscale, 7.4.1, netapp, ontap
 summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
 
-= Using Veritas Infoscale 7.4.x for Linux with NetApp ONTAP
+= Using Veritas Infoscale 7.4.1 for Linux with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,7 +15,7 @@ summary: Describes how to use Oracle Linux 6.4 with ONTAP
 :imagesdir: ./media/
 
 == Introduction
-This document provides guidance on ONTAP SAN host configuration settings for Veritas Infoscale 7.4.1, 7.4.2, and 7.4.3 releases for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
+This document provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7.4.1 release for Red Hat Enterprise Linux & Oracle Linux (RHCK based) platforms with FC, FCoE and iSCSI protocols.
 
 == Installing the Linux Unified Host Utilities
 
