Adding Veritas Infoscale 7.4.1 to sidebar

--- a/hu_veritas_74.adoc
+++ b/hu_veritas_74.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_veritas_7x.html
+permalink: hu_veritas_74.html
 keywords: host utilities, veritas, infoscale, 7.4.1, netapp, ontap
 summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
