--- a/hu_vsphere_7.adoc
+++ b/hu_vsphere_7.adoc
@@ -15,7 +15,7 @@ summary: Describes how to use Veritas Infoscale 7.3 for Linux with ONTAP
 :imagesdir: ./media/
 
 == Introduction
-This document provides guidance on ONTAP SAN host configuration settings for the vSphere 7.x release with FC. FCoE and iSCSI protocols.
+This document provides guidance on ONTAP SAN host configuration settings for the vSphere 7.x release with FC, FCoE and iSCSI protocols.
 
 == Hypervisor SAN Booting
 
@@ -30,28 +30,36 @@ ESXi provides an extensible multipathing module called Native Multipathing Plug-
 
 For NetApp ONTAP storage, VMW_SATP_ALUA plugin is used by default with VMW_PSP_RR  as a path selection policy (PSP). This can be confirmed by using the below command.
 
+
+*`esxcli storage nmp satp rule list -s VMW_SATP_ALUA`*
 ----
-esxcli storage nmp satp rule list -s VMW_SATP_ALUA
+Name           Device  Vendor    Model         Driver  Transport  Options
+-------------  ------  --------  ------------  ------  ---------  --------------------------
+VMW_SATP_ALUA          NETAPP                                     reset_on_attempted_reserve
 
-Please provide sample output for this command in a text file [AH]
 
+Rule Group  Claim Options  Default PSP  PSP Options     Description
+ ----------  -------------  -----------  --------------  -----------
+system      tpgs_on        VMW_PSP_RR                   NetApp arrays with ALUA support
 ----
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
+
+*`esxcli storage nmp device list -d naa.600a098038313530772b4d673979372f`*
 ----
-esxcli storage nmp device list -d naa.600a098038313530772b4d673979372f
 naa.600a098038313530772b4d673979372f
    Device Display Name: NETAPP Fibre Channel Disk (naa.600a098038313530772b4d673979372f)
    Storage Array Type: VMW_SATP_ALUA
    Storage Array Type Device Config: {implicit_support=on; explicit_support=off; explicit_allow=on; alua_followover=on; action_OnRetryErrors=off; {TPG_id=1000,TPG_state=AO}{TPG_id=1001,TPG_state=ANO}}
    Path Selection Policy: VMW_PSP_RR
-   Path Selection Policy Device Config: {policy=rr,iops=1000,bytes=10485760,useANO=0; lastPathIndex=1: NumIOsPending=0,numBytesPending=0}
+   Path Selection Policy Device Config: {policy=rr,iops=1,bytes=10485760,useANO=0; lastPathIndex=1: NumIOsPending=0,numBytesPending=0}
    Path Selection Policy Device Custom Config:
    Working Paths: vmhba3:C0:T3:L21, vmhba4:C0:T2:L21
    Is USB: false
-
-[root@interop-57-131:~] esxcli storage nmp path list -d naa.600a098038313530772b4d673979372f
+----
+*`esxcli storage nmp path list -d naa.600a098038313530772b4d673979372f`*
+----
 fc.20000090fae0ec8e:10000090fae0ec8e-fc.201000a098dfe3d1:200b00a098dfe3d1-naa.600a098038313530772b4d673979372f
    Runtime Name: vmhba3:C0:T2:L21
    Device: naa.600a098038313530772b4d673979372f
@@ -91,19 +99,20 @@ fc.20000090fae0ec8f:10000090fae0ec8f-fc.201000a098dfe3d1:200c00a098dfe3d1-naa.60
 
 include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
+*`esxcli storage nmp device list -d naa.600a098038304759563f4e7837574453`*
 ----
-esxcli storage nmp device list -d naa.600a098038304759563f4e7837574453
 naa.600a098038304759563f4e7837574453
    Device Display Name: NETAPP Fibre Channel Disk (naa.600a098038304759563f4e7837574453)
    Storage Array Type: VMW_SATP_ALUA
    Storage Array Type Device Config: {implicit_support=on; explicit_support=off; explicit_allow=on; alua_followover=on; action_OnRetryErrors=off; {TPG_id=1001,TPG_state=AO}{TPG_id=1000,TPG_state=AO}}
    Path Selection Policy: VMW_PSP_RR
-   Path Selection Policy Device Config: {policy=rr,iops=1000,bytes=10485760,useANO=0; lastPathIndex=2: NumIOsPending=0,numBytesPending=0}
+   Path Selection Policy Device Config: {policy=rr,iops=1,bytes=10485760,useANO=0; lastPathIndex=2: NumIOsPending=0,numBytesPending=0}
    Path Selection Policy Device Custom Config:
    Working Paths: vmhba4:C0:T0:L9, vmhba3:C0:T1:L9, vmhba3:C0:T0:L9, vmhba4:C0:T1:L9
    Is USB: false
-
- [root@rx2530m4-57-228:~] esxcli storage nmp device list -d naa.600a098038304759563f4e7837574453
+----
+*`esxcli storage nmp device list -d naa.600a098038304759563f4e7837574453`*
+----
 fc.20000024ff171d37:21000024ff171d37-fc.202300a098ea5e27:204a00a098ea5e27-naa.600a098038304759563f4e7837574453
    Runtime Name: vmhba4:C0:T0:L9
    Device: naa.600a098038304759563f4e7837574453
@@ -211,8 +220,8 @@ min.throttle = 8
 
 Use the following command to verify the HardwareAcceleratedLocking setting.
 
+*`esxcli system settings  advanced list --option /VMFS3/HardwareAcceleratedLocking`*
 ----
-esxcli system settings  advanced list --option /VMFS3/HardwareAcceleratedLocking
    Path: /VMFS3/HardwareAcceleratedLocking
    Type: integer
    Int Value: 1
@@ -223,15 +232,14 @@ esxcli system settings  advanced list --option /VMFS3/HardwareAcceleratedLocking
    Default String Value:
    Valid Characters:
    Description: Enable hardware accelerated VMFS locking (requires compliant hardware). Please see http://kb.vmware.com/kb/2094604 before disabling this option.
-[root@nbs-esx-10-226:~]
 ----
 
 === Validating the Disk IOPs setting
 
 Use the following command to verify the IOPs setting.
 
+*`esxcli storage nmp device list -d naa.600a098038304731783f506670553355`*
 ----
-esxcli storage nmp device list -d naa.600a098038304731783f506670553355
 naa.600a098038304731783f506670553355
    Device Display Name: NETAPP Fibre Channel Disk (naa.600a098038304731783f506670553355)
    Storage Array Type: VMW_SATP_ALUA
@@ -247,8 +255,8 @@ naa.600a098038304731783f506670553355
 
 Use the following command to verify the QFullSampleSize
 
+*`esxcli system settings  advanced list --option /Disk/QFullSampleSize`*
 ----
-esxcli system settings  advanced list --option /Disk/QFullSampleSize
    Path: /Disk/QFullSampleSize
    Type: integer
    Int Value: 0
