--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -90,7 +90,7 @@ To install the Host Utilities software package interactively, you must run the H
 . Run the `netapp_windows_host_utilities_7.1_x64` file and follow the instructions on the screen.
 . Reboot the Windows host when prompted.
 
-== Installing the Host Utilities from a command line
+=== Installing the Host Utilities from a command line
 
 You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at a Windows command prompt.
 The Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively to obtain the installation package.
